FIX Parts of layout element may be invisible when `size` greater than 100%

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -33,6 +33,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background-color: #FFFFFF;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
   will-change: auto;
